# tiny-mall

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  db.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: github-actions.yml
alembic/: env.py
alembic/versions/: 039549d7e7ca_.py  1898130e72f1_.py  31d8d856a83a_add_image_is_favorite.py  352368f77aae_.py  36cbefe1cb04_.py  63eae5c9bf60_.py  64b342611fa2_.py  69ce0e5d7aa5_.py  71e97baa2c13_.py  71f75c185f39_create_image.py  9810711e13db_.py  bdc9f22b9388_create_tables.py  c495905f13ae_.py  e1c99a5c5edc_.py  e2bbf2900348_.py  efd103567473_.py  f9f5ccfa38d6_.py
data/: categories.sql
scripts/: init.sh  start.sh
tests/: test_tiny_mall.py
tiny_mall/: config.py  database.py  deps.py  init.py  main.py
tiny_mall/cruds/: __init__.py  address.py  category.py  image.py  order.py  product.py  user.py
tiny_mall/libs/: __init__.py  order_no.py  password_hash.py  security.py
tiny_mall/models/: __init__.py  address.py  base.py  category.py  image.py  order.py  product.py  user.py
tiny_mall/routers/: __init__.py  auth.py  file.py  login.py  user.py
tiny_mall/routers/admin/: __init__.py  category.py  categroy.py  image.py  order.py  product.py  user.py
tiny_mall/routers/client/: __init__.py  address.py  category.py  order.py  user.py
tiny_mall/schemas/: __init__.py  address.py  category.py  image.py  order.py  product.py  shop.py  user.py
